[b][color=orange]v3.38[/color], 07.09.2018[/b][list]
[*]Some major code improvements by Whiro. Thanks for this:
   -> Compatibily with other Plugins/AddOns
      Some modules from me or other Plugins/AddOns gets disabled if there is any incompatibility.
      If this happens the first time, there will be a print in the chat.
   -> Add db conversations if updating/switching/delete profiles. So my modules take account to this.
[*]Updated BigWigs profile and add a BigWigs Heal Profile.
[*]Some skin updates.[/list]


[b][color=orange]v3.37[/color], 03.09.2018[/b][list]
[*]Added a split bag feature. Which allows you to split the All In One Bag. Credits: SMRTL
[*]Updated ProjectAzilroka profile.
[*]Fixed an error in my DataText options. No one have discovered it yet. :>
[*]Added an compatibily feature. My modules will gets disabled if a specific
   AddOn is Loaded. Many thanks to Whiro.
[*]Added a second layout to my install => Heal Layout. Needs feedback!![/list]

[b][color=orange]v3.36[/color], 31.08.2018[/b][list]
[*]Register my modules to an own function.
[*]You are now able, to change the most of my stuff to use the Value Color from ElvUI.
   No more forced to use ClassColor (if you don't want to).
[*]Overhaul my complete Options.
[*]Add a new install step to choose a profile where you want to apply my settings.[/list]

[b][color=orange]v3.35[/color], 29.08.2018[/b][list]
[*]Skin extra CharacterStatsPane from S&L Armory Mode.
[*]Updated LocPanel & MicroBar combat hide options.
[*]Show/hide the bags if the ScrappingMachine Frame is shown. Thx Whiro
[*]Fix a possible error if the panels table doesn't exist. Thx Whiro
[*]Added BfA Augementation Rune to the RaidBuffs.
[*]A lot of skin updates.[/list]

[b][color=orange]v3.34[/color], 22.08.2018[/b][list]
[*]Fixed an issue that the Changelog wasn't showing on version bumb.
[*]Added the option back to hide the Coords on the LocPanel.
[*]Ajust some DataTexts in my install.