@@ -1,3 +1,9 @@
+** v3.39, 08.09.2018**
+* Remove the BenikUI incompatibility checks. Sorry for this.
+* Fixed an error in Enhanced Namplateaura if the Player NamePlate was enabled. #27
+* Comment out the DBM skin for now (again). Will work on it more.
+* Some new skinning function for the MailFrame Checkboxes.
+
 ** v3.38, 07.09.2018**
 * Some major code improvements by Whiro. Thanks for this:
   -> Compatibily with other Plugins/AddOns
