@@ -1,3 +1,9 @@
+[b][color=orange]v3.39[/color], 08.09.2018[/b][list]
+[*]Remove the BenikUI incompatibility checks. Sorry for this.
+[*]Fixed an error in Enhanced Namplateaura if the Player NamePlate was enabled. #27
+[*]Comment out the DBM skin for now (again). Will work on it more.
+[*]Some new skinning function for the MailFrame Checkboxes.[/list]
+
 [b][color=orange]v3.38[/color], 07.09.2018[/b][list]
 [*]Some major code improvements by Whiro. Thanks for this:
    -> Compatibily with other Plugins/AddOns
